--- a/_pages/repositories.html
+++ b/_pages/repositories.html
@@ -5,7 +5,7 @@ author_profile: true
 ---
 
 <p id="repo-intro">
-  Below is a live list of my public GitHub repositories, fetched automatically from the GitHub API. 
+  Below is a live list of my public GitHub repositories, fetched automatically from the GitHub API.
   They are sorted by most recently updated.
 </p>
 
@@ -16,7 +16,8 @@ author_profile: true
 <div id="github-repos" style="display: none;"></div>
 
 <div id="github-repos-error" style="display: none; text-align: center; padding: 2rem 0; color: #c0392b;">
-  <p>⚠️ Could not load repositories. Please check back later or visit my <a href="https://github.com/YOUR_GITHUB_USERNAME?tab=repositories" target="_blank">GitHub profile</a> directly.</p>
+  <p>⚠️ Could not load repositories. Please check back later or visit my <a
+      href="https://github.com/anismhd?tab=repositories" target="_blank">GitHub profile</a> directly.</p>
 </div>
 
 <style>
@@ -87,15 +88,11 @@ author_profile: true
   }
 </style>
 
-<!-- ======================================================
-     IMPORTANT: Replace YOUR_GITHUB_USERNAME below with
-     your actual GitHub username.
-     ====================================================== -->
+{% raw %}
 <script>
-  const GITHUB_USERNAME = "anismhd";
+  var GITHUB_USERNAME = "anismhd";
 
-  // Language colors (subset)
-  const LANG_COLORS = {
+  var LANG_COLORS = {
     "JavaScript": "#f1e05a", "TypeScript": "#3178c6", "Python": "#3572A5",
     "Java": "#b07219", "C++": "#f34b7d", "C": "#555555", "C#": "#178600",
     "Go": "#00ADD8", "Rust": "#dea584", "Ruby": "#701516", "PHP": "#4F5D95",
@@ -106,74 +103,63 @@ author_profile: true
     "Elixir": "#6e4a7e", "Perl": "#0298c3", "MATLAB": "#e16737"
   };
 
-  async function fetchRepos() {
-    const loadingEl = document.getElementById("github-repos-loading");
-    const containerEl = document.getElementById("github-repos");
-    const errorEl = document.getElementById("github-repos-error");
+  function fetchRepos() {
+    var loadingEl = document.getElementById("github-repos-loading");
+    var containerEl = document.getElementById("github-repos");
+    var errorEl = document.getElementById("github-repos-error");
 
-    try {
-      let allRepos = [];
-      let page = 1;
-      let hasMore = true;
+    var apiUrl = "https://api.github.com/users/" + GITHUB_USERNAME + "/repos?per_page=100&sort=updated";
 
-      while (hasMore) {
-        const response = await fetch(
-          `https://api.github.com/users/${GITHUB_USERNAME}/repos?per_page=100&page=${page}&sort=updated`
-        );
-        if (!response.ok) throw new Error(`GitHub API error: ${response.status}`);
+    fetch(apiUrl)
+      .then(function (response) {
+        if (!response.ok) throw new Error("GitHub API error: " + response.status);
+        return response.json();
+      })
+      .then(function (allRepos) {
+        allRepos = allRepos.filter(function (r) { return !r.fork; });
+        allRepos.sort(function (a, b) { return new Date(b.updated_at) - new Date(a.updated_at); });
 
-        const repos = await response.json();
-        allRepos = allRepos.concat(repos);
-        hasMore = repos.length === 100;
-        page++;
-      }
+        if (allRepos.length === 0) {
+          loadingEl.innerHTML = "<p>No public repositories found.</p>";
+          return;
+        }
 
-      // Filter out forks (optional — remove this line to include forks)
-      allRepos = allRepos.filter(r => !r.fork);
+        var html = '<div class="repo-grid">';
+        for (var i = 0; i < allRepos.length; i++) {
+          var repo = allRepos[i];
+          var langColor = LANG_COLORS[repo.language] || "#ccc";
+          var desc = repo.description
+            ? (repo.description.length > 120 ? repo.description.substring(0, 117) + "..." : repo.description)
+            : "<em>No description</em>";
+          var langHtml = repo.language
+            ? '<span><span class="language-dot" style="background:' + langColor + '"></span> ' + repo.language + '</span>'
+            : "";
 
-      // Sort by most recently updated
-      allRepos.sort((a, b) => new Date(b.updated_at) - new Date(a.updated_at));
+          html += '<div class="repo-card">'
+            + '<div>'
+            + '<h3><a href="' + repo.html_url + '" target="_blank" rel="noopener">' + repo.name + '</a></h3>'
+            + '<p class="repo-description">' + desc + '</p>'
+            + '</div>'
+            + '<div class="repo-meta">'
+            + langHtml
+            + '<span>&#11088; ' + repo.stargazers_count + '</span>'
+            + '<span>&#127860; ' + repo.forks_count + '</span>'
+            + '</div>'
+            + '</div>';
+        }
+        html += "</div>";
 
-      if (allRepos.length === 0) {
-        loadingEl.innerHTML = "<p>No public repositories found.</p>";
-        return;
-      }
-
-      let html = '<div class="repo-grid">';
-      for (const repo of allRepos) {
-        const langColor = LANG_COLORS[repo.language] || "#ccc";
-        const desc = repo.description
-          ? repo.description.length > 120
-            ? repo.description.substring(0, 117) + "..."
-            : repo.description
-          : "<em>No description</em>";
-
-        html += `
-          <div class="repo-card">
-            <div>
-              <h3><a href="${repo.html_url}" target="_blank" rel="noopener">${repo.name}</a></h3>
-              <p class="repo-description">${desc}</p>
-            </div>
-            <div class="repo-meta">
-              ${repo.language ? `<span><span class="language-dot" style="background:${langColor}"></span> ${repo.language}</span>` : ""}
-              <span>⭐ ${repo.stargazers_count}</span>
-              <span>🍴 ${repo.forks_count}</span>
-            </div>
-          </div>
-        `;
-      }
-      html += "</div>";
-
-      loadingEl.style.display = "none";
-      containerEl.innerHTML = html;
-      containerEl.style.display = "block";
-
-    } catch (err) {
-      console.error("Failed to fetch repos:", err);
-      loadingEl.style.display = "none";
-      errorEl.style.display = "block";
-    }
+        loadingEl.style.display = "none";
+        containerEl.innerHTML = html;
+        containerEl.style.display = "block";
+      })
+      .catch(function (err) {
+        console.error("Failed to fetch repos:", err);
+        loadingEl.style.display = "none";
+        errorEl.style.display = "block";
+      });
   }
 
   document.addEventListener("DOMContentLoaded", fetchRepos);
 </script>
+{% endraw %}
